--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@alpha-c/hardhat-project",
+  "name": "@alpha-c/hardhat",
   "version": "0.0.1",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
@@ -22,5 +22,20 @@
     "prettier-plugin-solidity": "^1.0.0-beta.13",
     "solhint": "^3.3.7",
     "solidity-coverage": "^0.7.20"
+  },
+  "scripts": {
+    "chain": "hardhat node --network hardhat --no-deploy",
+    "fork": "hardhat node --no-deploy --network hardhat --fork https://mainnet.infura.io/v3/460f40a260564ac4a4f4b3fffb032dad",
+    "test": "hardhat test --network hardhat",
+    "compile": "hardhat compile",
+    "deploy": "hardhat deploy --export-all ../next-app/src/contracts/hardhat_contracts.json",
+    "postdeploy": "hardhat run scripts/publish.js",
+    "watch": "node scripts/watch.js",
+    "accounts": "hardhat accounts",
+    "balance": "hardhat balance",
+    "send": "hardhat send",
+    "generate": "hardhat generate",
+    "account": "hardhat account",
+    "verify": "hardhat verify"
   }
 }
