--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,64 @@
-node_modules/
-**/.DS_Store
+packages/hardhat/*.txt
+**/aws.json
+**/node_modules
+
+packages/hardhat/artifacts*
+packages/hardhat/deployments
+packages/next-app/src/contracts/*
+!packages/next-app/src/contracts/external_contracts.js
+packages/hardhat/cache*
+packages/**/data
+!packages/next-app/src/contracts/contracts.js
+
+
+# ts
+packages/hardhat-ts/cache
+# secrets
+.secret
+
+packages/subgraph/config/config.json
+tenderly.yaml
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+coverage
+
+# production
+build
+# yarn / eslint
+.yarn/cache
+.yarn/install-state.gz
+.yarn/build-state.yml
+.eslintcache
+# testing
+coverage
+
+# production
+build
+
+# Hardhat files
+cache
+artifacts
+
+# misc
+.DS_Store
+.env*
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.idea
+
+# Local Netlify folder
+.netlify
+*.tsbuildinfo
+*.stackdump
+
+# doc directory
+/doc
