--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alpha-c",
+  "name": "@alpha-c/monorepo",
   "version": "0.0.1",
   "main": "index.js",
   "repository": "https://github.com/TheSlayer-666/Alpha-C.git",
