--- a/packages/next-app/package.json
+++ b/packages/next-app/package.json
@@ -19,7 +19,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-toast": "^2.2.0",
-    "wagmi": "^0.2.21"
+    "wagmi": "^0.2.21",
+    "zustand": "^3.7.1"
   },
   "devDependencies": {
     "@emotion/eslint-plugin": "^11.7.0",
